Added User dependency to todo
